# tank_wars_rs

./: Client.gdns  GlobalVariables.gd  README.md  export_presets.cfg  native_lib.tres  project.godot  resource_queue.gd
Battle/: Battle.gd  Battle.tscn  Explosion.gd  Explosion.tscn
Chest/: ChestOpen.gd  ChestOpen.tscn  Loot.gd
Loading/: LoadingScreen.gd  LoadingScreen.tscn
Menu/: Menu.gd  Menu.tscn
NickName/: NickName.gd  NickName.tscn
Wait/: SearchForOpponent.gd  SearchForOpponent.tscn
cert/: cert.der
joystick/: virtual_joystick.gd
tank_wars_rust/: Cargo.toml
tank_wars_rust/src/: client.rs  data.rs  lib.rs
